criado front login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
         <img src="assets/img/moto.svg" alt="">
 
     <mat-form-field class="full-width" appearance="fill">
-      <mat-label>E-mail</mat-label>
+      <mat-label class="texto">E-mail</mat-label>
       <input 
       [formControl]="email"
       required
@@ -17,7 +17,7 @@
     </mat-form-field>
 
     <mat-form-field class="full-width" appearance="fill">
-        <mat-label>Senha</mat-label>
+        <mat-label class="texto">Senha</mat-label>
         <input 
         [formControl]="senha"
         required
