--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -28,9 +28,14 @@ img{
 .full-width{
     width: 100%;
     margin-top: 2rem;
+    color: black;
 }
 
 button{
     margin-top: 1.5rem;
+    color: black;
+}
+.texto{
+    color: black;
 }
 
