--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <h1 class="mat-elevation-z4">Motolivre - Dicas de um dev</h1>
+    <h1 class="mat-elevation-z4">Motolivre</h1>
 </div>
