html e css para component estabelecimento create

--- a/src/app/components/estabelecimento/estabelecimento-create/estabelecimento-create.component.html
+++ b/src/app/components/estabelecimento/estabelecimento-create/estabelecimento-create.component.html
@@ -1,1 +1,54 @@
-<p>estabelecimento-create works!</p>
+<div class="comtainer mat-elevation-z8" >
+    <form class="form">
+      <br>
+        <h1 class="fullWidth">Cadastro</h1>
+        <br>
+        <img class="fullWidth" src="assets/img/loginusuario.svg" alt="Help Desk Dicas de um DEV">
+
+        <br>
+        <br>
+        <br>
+        <section class="section">
+            <mat-checkbox class="margin">Administrador</mat-checkbox>
+            <mat-checkbox class="margin">Motoboy</mat-checkbox>
+            <mat-checkbox class="margin">Estabelecimento</mat-checkbox>
+            
+        </section>
+
+        
+            <mat-form-field class="fullWidth" appearance="legacy">
+              <mat-label>Nome</mat-label>
+              <input matInput placeholder="EX... Gabriel">
+              <mat-icon matSuffix>badge</mat-icon>
+              
+            </mat-form-field>
+            
+            <mat-form-field class="fullWidth" appearance="legacy">
+              <mat-label>CPF</mat-label>
+              <input matInput placeholder="EX... 000.000.000-00">
+              <mat-icon matSuffix>verified user</mat-icon>
+              
+            </mat-form-field>
+         
+            <mat-form-field class="fullWidth" appearance="legacy">
+              <mat-label>E-mail</mat-label>
+              <input matInput placeholder="EX... fulano@gmail.com">
+              <mat-icon matSuffix>alternate_email</mat-icon>
+              
+            </mat-form-field>
+         
+            <mat-form-field class="fullWidth" appearance="legacy">
+              <mat-label>Senha</mat-label>
+              <input matInput placeholder="EX... 1234">
+              <mat-icon matSuffix>vpn_key</mat-icon>
+              
+            </mat-form-field>
+            <button class="fullWidth" mat-elevation-z8 mat-flat-button color="primary">Cadastrar</button>
+            <button class="fullWidth" mat-elevation-z8 mat-flat-button color="warn">Cancelar</button>
+          <br>
+    </form>
+    <br>
+</div>
+<body>
+  <br><br><br><br>
+</body>
