--- a/src/app/components/estabelecimento/estabelecimento-list/estabelecimento-list.component.css
+++ b/src/app/components/estabelecimento/estabelecimento-list/estabelecimento-list.component.css
@@ -13,7 +13,8 @@ table {
     margin-left: 82.5%;
     margin-bottom: 2rem;
     background-color: white;
-    color: black
+    color: black;
+    
    
   }
   h1{
