--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
 
         <h1>Motolivre - Bem-Vindo </h1>
 
-        <img src="assets/img/moto.svg" alt="">
+        <img src="assets/img/moto1.svg" alt="">
 
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>E-mail</mat-label>
