--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -21,14 +21,15 @@ h1{
 
 img{
     height: 9rem;
-    width: 100%;
-    margin: 1.5 rem auto 1.5 auto;
+    width: 50%;
+   margin-left: 6rem;
 }
 
 .full-width{
     width: 100%;
     margin-top: 2rem;
     color: black;
+    
     
 }
 
