--- a/src/app/components/estabelecimento/estabelecimento-update/estabelecimento-update.component.html
+++ b/src/app/components/estabelecimento/estabelecimento-update/estabelecimento-update.component.html
@@ -1,7 +1,7 @@
 <div class="comtainer mat-elevation-z8" >
     <form class="form">
       <br>
-        <h1 class="fullWidth">Cadastro</h1>
+        <h1 class="fullWidth">Atualizar Estabelecimento</h1>
         <br>
         <img class="fullWidth" src="assets/img/loginusuario.svg" alt="Help Desk Dicas de um DEV">
 
@@ -10,8 +10,8 @@
         <br>
         <section class="section">
             <mat-checkbox (click)="addPerfil(0)" class="margin">Administrador</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(1)" class="margin">Motoboy</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(2)"  [checked]="true" class="margin">Estabelecimento</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(1)" [checked]="true" class="margin">Motoboy</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(2)" class="margin">Estabelecimento</mat-checkbox>
             
         </section>
 
@@ -69,8 +69,8 @@
               <mat-icon matSuffix>vpn_key</mat-icon>
               
             </mat-form-field>
-            <button (click)="create()" [disabled] ="!validaCampos()" class="fullWidth" mat-elevation-z8 mat-flat-button color="primary">Cadastrar</button>
-            <button routerLink="../" class="fullWidth" mat-elevation-z8 mat-flat-button color="warn">Cancelar</button>
+            <button (click)="update()" [disabled] ="!validaCampos()" class="fullWidth" mat-elevation-z8 mat-flat-button color="primary">Atualizar</button>
+            <button routerLink="../../" class="fullWidth" mat-elevation-z8 mat-flat-button color="warn">Cancelar</button>
           <br>
     </form>
     <br>
