--- a/src/app/components/estabelecimento/estabelecimento-update/estabelecimento-update.component.html
+++ b/src/app/components/estabelecimento/estabelecimento-update/estabelecimento-update.component.html
@@ -10,8 +10,8 @@
         <br>
         <section class="section">
             <mat-checkbox (click)="addPerfil(0)" class="margin">Administrador</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(1)" [checked]="true" class="margin">Motoboy</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(2)" class="margin">Estabelecimento</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(1)"  class="margin">Motoboy</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(2)" [checked]="true" class="margin">Estabelecimento</mat-checkbox>
             
         </section>
 
