crud completo para motoboy

--- a/src/app/components/estabelecimento/estabelecimento-delete/estabelecimento-delete.component.html
+++ b/src/app/components/estabelecimento/estabelecimento-delete/estabelecimento-delete.component.html
@@ -55,6 +55,7 @@
               [(ngModel)]="estabelecimento.senha"
               name="senha"
               [disabled]="true"
+              type="password"
               matInput>
               <mat-icon matSuffix>vpn_key</mat-icon>
               
