--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -10,7 +10,7 @@
             <i class="material-icons">account_circle</i>
             Estabelecimento
          </a>
-         <a mat-list-item routerLink="/">
+         <a mat-list-item routerLink="motoboy">
             <i class="material-icons">person</i>
             Motoboy
          </a>
