--- a/src/app/components/chamado/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamado/chamado-list/chamado-list.component.html
@@ -1,1 +1,83 @@
-<p>chamado-list works!</p>
+<div class="container">
+
+    <h1 ><i><font face="Castellar">Chamados</font></i></h1>
+  
+    
+    
+    <mat-form-field appearance="standard">
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+    </mat-form-field>
+
+
+    <mat-radio-group >
+        <mat-radio-button >ABERTO</mat-radio-button>
+        <mat-radio-button >ANDAMENTO</mat-radio-button>
+        <mat-radio-button >FECHADO</mat-radio-button>
+    </mat-radio-group>
+
+    
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="ELEMENT_DATA">
+    
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="titulo">
+          <th mat-header-cell *matHeaderCellDef> Titulo </th>
+          <td mat-cell *matCellDef="let element"> {{element.titulo}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="motoboy">
+          <th mat-header-cell *matHeaderCellDef> Motoboy </th>
+          <td mat-cell *matCellDef="let element"> {{element.nomeMotoboy}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="estabelecimento">
+            <th mat-header-cell *matHeaderCellDef> Estabelecimento </th>
+            <td mat-cell *matCellDef="let element"> {{element.nomeEstabelecimento}} </td>
+          </ng-container>
+    
+        <ng-container matColumnDef="dataAbertura">
+          <th mat-header-cell *matHeaderCellDef> Data de Abertura </th>
+          <td mat-cell *matCellDef="let element"> {{element.dataAbertura}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="prioridade">
+            <th mat-header-cell *matHeaderCellDef> Prioridade </th>
+            <td mat-cell *matCellDef="let element"> {{element.prioridade}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef> Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+          </ng-container>
+  
+        <ng-container matColumnDef="acoes">
+          <th mat-header-cell *matHeaderCellDef> Ações </th>
+          <td mat-cell *matCellDef="let element"> 
+          <a routerLink="">
+            <i class="material-icons edit">edit</i>
+          </a>  
+          <a routerLink="">
+            <i class="material-icons delete">visibility</i>
+          </a>
+          </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    
+      <mat-paginator [pageSizeOptions]="[1,5, 10, 20]"
+                     showFirstLastButtons 
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
+      
+    </div>
+   
+    </div>
+    <br>
+    <button  mat-stroked-button color="black" class="mat-elevation-z10"><b>Novo Chamado</b></button>
