--- a/src/app/components/estabelecimento/estabelecimento-list/estabelecimento-list.component.html
+++ b/src/app/components/estabelecimento/estabelecimento-list/estabelecimento-list.component.html
@@ -25,6 +25,7 @@
       <ng-container matColumnDef="weight">
         <th mat-header-cell *matHeaderCellDef> CPF </th>
         <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
+        <input mask="000.000.000-00">
       </ng-container>
   
       <ng-container matColumnDef="symbol">
@@ -33,14 +34,18 @@
       </ng-container>
 
       <ng-container matColumnDef="acoes">
-        <th mat-header-cell *matHeaderCellDef> Ações </th>
+        <th mat-header-cell *matHeaderCellDef> Configurações</th>
         <td mat-cell *matCellDef="let element"> 
+          
+        
         <a routerLink="update/{{element.id}}">
           <i class="material-icons edit">edit</i>
-        </a>  
+        </a>
+
         <a routerLink="delete/{{element.id}}">
           <i class="material-icons delete">delete</i>
         </a>
+
         </td>
       </ng-container>
   
