componente para chamado-create

--- a/src/app/components/chamado/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamado/chamado-list/chamado-list.component.html
@@ -80,4 +80,4 @@
    
     </div>
     <br>
-    <button  mat-stroked-button color="black" class="mat-elevation-z10"><b>Novo Chamado</b></button>
+    <button  routerLink="create" mat-stroked-button color="black" class="mat-elevation-z10"><b>Novo Chamado</b></button>
