--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -1,1 +1,64 @@
-<p>chamado-create works!</p>
+<div class="container mat-elevation-z8">
+    <h1 class="full-width">Criando Chamado</h1>
+    <img class="full-width" src="assets/img/chamado-create.svg" alt="chamado-create">
+
+    <form class="form">
+        <mat-form-field class="full-width" appearance="outline">
+          <mat-label>Titulo do Chamado</mat-label>
+          <input matInput placeholder="Ex. Ir no Carlão" >
+        </mat-form-field>      
+    </form>
+
+    <div class="status-prioridade">
+        <mat-form-field appearance="outline">
+            <mat-label>Status</mat-label>
+            <mat-select>
+              <mat-option value="0">Aberto</mat-option>
+              <mat-option value="1">Andamento</mat-option>
+              <mat-option value="2">Encerrado</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Prioridade</mat-label>
+            <mat-select>
+              <mat-option value="0">Baixa</mat-option>
+              <mat-option value="1">Media</mat-option>
+              <mat-option value="2">Alta</mat-option>
+            </mat-select>
+          </mat-form-field>
+    </div>
+
+    <div class="estabelecimento">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Selecione um Estabelecimento</mat-label>
+            <mat-select>
+              <mat-option value="0">Gabriel</mat-option>
+            </mat-select>
+          </mat-form-field>
+    </div>
+
+    <div class="motoboy">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Selecione um Motoboy</mat-label>
+            <mat-select>
+              <mat-option value="0">Alberto</mat-option>
+            </mat-select>
+          </mat-form-field>
+    </div>
+
+    <form class="form">      
+        <mat-form-field class="full-width " appearance="outline">
+          <mat-label>Qual horario do serviço</mat-label>
+          <textarea class="descricao" matInput placeholder="Ex. Das 19:00 as 23:00"></textarea>
+        </mat-form-field>
+    </form>
+
+    <button class="add mat-elevation-z8" mat-raised-button color="primary">Adicionar</button>
+    <button class="home mat-elevation-z8" mat-fab color="warn" >
+          <mat-icon>home</mat-icon>
+    </button>
+
+    <p class="full-width ">Desenvolvido by allne</p>
+</div>
+
