--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -6,6 +6,8 @@
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Titulo do Chamado</mat-label>
           <input 
+          [(ngModel)]="chamado.titulo"
+          name="titulo"
           [formControl]="titulo" 
           required
           matInput 
@@ -16,7 +18,11 @@
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
             <mat-label>Status</mat-label>
-            <mat-select [formControl]="status" required >
+            <mat-select 
+            [(ngModel)]="chamado.status"
+            name="status"
+            [formControl]="status" 
+            required >
               <mat-option value="0">Aberto</mat-option>
               <mat-option value="1">Andamento</mat-option>
               <mat-option value="2">Encerrado</mat-option>
@@ -25,7 +31,11 @@
 
           <mat-form-field appearance="outline">
             <mat-label>Prioridade</mat-label>
-            <mat-select [formControl]="prioridade" required>
+            <mat-select 
+            [(ngModel)]="chamado.prioridade"
+             name="prioridade"
+            [formControl]="prioridade" 
+            required>
               <mat-option value="0">Baixa</mat-option>
               <mat-option value="1">Media</mat-option>
               <mat-option value="2">Alta</mat-option>
@@ -36,8 +46,12 @@
     <div class="estabelecimento">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um Estabelecimento</mat-label>
-            <mat-select [formControl]="estabelecimento" required>
-              <mat-option value="0">Gabriel</mat-option>
+            <mat-select
+            [(ngModel)]="chamado.estabelecimento"
+             name="estabelecimento" 
+            [formControl]="estabelecimento" 
+            required>
+              <mat-option *ngFor="let est of estabelecimentos" value="{{est.id}}">{{est.nome}}</mat-option>
             </mat-select>
           </mat-form-field>
     </div>
@@ -45,25 +59,31 @@
     <div class="motoboy">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um Motoboy</mat-label>
-            <mat-select [formControl]="motoboy" required>
-              <mat-option value="0">Alberto</mat-option>
+            <mat-select 
+            [(ngModel)]="chamado.motoboy"
+           name="motoboy"
+            [formControl]="motoboy" 
+            required>
+              <mat-option *ngFor="let mot of motoboys" value="{{mot.id}}">{{mot.nome}}</mat-option>
             </mat-select>
           </mat-form-field>
     </div>
 
     <form class="form">      
         <mat-form-field class="full-width " appearance="outline">
-          <mat-label>Qual horario do serviço</mat-label>
-          <textarea 
-          [formControl]="descricao"
+          <mat-label>Deixe uma observação</mat-label>
+          <textarea
+          [(ngModel)]="chamado.observacoes"
+          name="observacoes" 
+          [formControl]="observacoes"
            required
-          class="descricao" 
+          class="observacoes" 
           matInput 
           placeholder="Ex. Das 19:00 as 23:00"></textarea>
         </mat-form-field>
     </form>
 
-    <button [disabled]="!validaCampos()" class="add mat-elevation-z8" mat-raised-button color="primary">Adicionar</button>
+    <button (click)="create()" [disabled]="!validaCampos()" class="add mat-elevation-z8" mat-raised-button color="primary">Adicionar</button>
     
     <button class="home mat-elevation-z8" mat-fab color="warn" >
           <mat-icon>home</mat-icon>
