componente chamado-update criado

--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -85,7 +85,7 @@
 
     <button (click)="create()" [disabled]="!validaCampos()" class="add mat-elevation-z8" mat-raised-button color="primary">Adicionar</button>
     
-    <button class="home mat-elevation-z8" mat-fab color="warn" >
+    <button routerLink="../" class="home mat-elevation-z8" mat-fab color="warn" >
           <mat-icon>home</mat-icon>
     </button>
 
