--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -1,1 +1,94 @@
-<p>chamado-update works!</p>
+<div class="container mat-elevation-z8">
+    <h1 class="full-width">Atualizando Chamado</h1>
+    <img class="full-width" src="assets/img/chamado-create.svg" alt="chamado-create">
+
+    <form class="form">
+        <mat-form-field class="full-width" appearance="outline">
+          <mat-label>Titulo Chamado</mat-label>
+          <input 
+          [(ngModel)]="chamado.titulo"
+          name="titulo"
+          [formControl]="titulo" 
+          required
+          matInput 
+          placeholder="Ex. Ir no Carlão" >
+        </mat-form-field>      
+    </form>
+
+    <div class="status-prioridade">
+        <mat-form-field appearance="outline">
+            <mat-label>Status</mat-label>
+            <mat-select 
+            [(ngModel)]="chamado.status"
+            name="status"
+            [formControl]="status" 
+            required >
+              <mat-option value="0">Aberto</mat-option>
+              <mat-option value="1">Andamento</mat-option>
+              <mat-option value="2">Encerrado</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Prioridade</mat-label>
+            <mat-select 
+            [(ngModel)]="chamado.prioridade"
+             name="prioridade"
+            [formControl]="prioridade" 
+            required>
+              <mat-option value="0">Baixa</mat-option>
+              <mat-option value="1">Media</mat-option>
+              <mat-option value="2">Alta</mat-option>
+            </mat-select>
+          </mat-form-field>
+    </div>
+
+    <div class="estabelecimento">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Selecione um Estabelecimento</mat-label>
+            <mat-select
+            [(ngModel)]="chamado.estabelecimento"
+             name="estabelecimento" 
+            [formControl]="estabelecimento" 
+            required>
+              <mat-option *ngFor="let est of estabelecimentos" value="{{est.id}}">{{est.nome}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+    </div>
+
+    <div class="motoboy">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Selecione um Motoboy</mat-label>
+            <mat-select 
+            [(ngModel)]="chamado.motoboy"
+           name="motoboy"
+            [formControl]="motoboy" 
+            required>
+              <mat-option *ngFor="let mot of motoboys" value="{{mot.id}}">{{mot.nome}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+    </div>
+
+    <form class="form">      
+        <mat-form-field class="full-width " appearance="outline">
+          <mat-label>Deixe uma observação</mat-label>
+          <textarea
+          [(ngModel)]="chamado.observacoes"
+          name="observacoes" 
+          [formControl]="observacoes"
+           required
+          class="observacoes" 
+          matInput 
+          placeholder="Ex. Das 19:00 as 23:00"></textarea>
+        </mat-form-field>
+    </form>
+
+    <button (click)="create()" [disabled]="!validaCampos()" class="add mat-elevation-z8" mat-raised-button color="primary">Atualizar</button>
+    
+    <button routerLink="../" class="home mat-elevation-z8" mat-fab color="warn" >
+          <mat-icon>home</mat-icon>
+    </button>
+
+    <p class="full-width ">Desenvolvido by allne</p>
+</div>
+
