--- a/src/app/components/chamado/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamado/chamado-list/chamado-list.component.html
@@ -13,7 +13,7 @@
     <mat-radio-group >
         <mat-radio-button (click)="orderByStatus(0)" value="0">ABERTO</mat-radio-button>
         <mat-radio-button (click)="orderByStatus(1)" value="1">ANDAMENTO</mat-radio-button>
-        <mat-radio-button (click)="orderByStatus(2)" value="2">FECHADO</mat-radio-button>
+        <mat-radio-button (click)="orderByStatus(2)" value="2">ENCERRADO</mat-radio-button>
     </mat-radio-group>
 
     
