--- a/src/app/components/motoboy/motoboy-update/motoboy-update.component.html
+++ b/src/app/components/motoboy/motoboy-update/motoboy-update.component.html
@@ -8,12 +8,7 @@
         <br>
         <br>
         <br>
-        <section class="section">
-            <mat-checkbox (click)="addPerfil(0)" class="margin">Administrador</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(1)"  [checked]="true" class="margin">Motoboy</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(2)"  class="margin">Estabelecimento</mat-checkbox>
-            
-        </section>
+        
 
         
             <mat-form-field class="fullWidth" appearance="legacy">
@@ -70,7 +65,7 @@
               <mat-icon matSuffix>vpn_key</mat-icon>
               
             </mat-form-field>
-            <button (click)="update()" [disabled] ="!validaCampos()" class="fullWidth" mat-elevation-z8 mat-flat-button color="primary">Atualizar</button>
+            <button routerLink="../../" (click)="update()" [disabled] ="!validaCampos()" class="fullWidth" mat-elevation-z8 mat-flat-button color="primary">Atualizar</button>
             <button routerLink="../../" class="fullWidth" mat-elevation-z8 mat-flat-button color="warn">Cancelar</button>
           <br>
     </form>
