--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -83,7 +83,7 @@
         </mat-form-field>
     </form>
 
-    <button (click)="update()" [disabled]="!validaCampos()" class="add mat-elevation-z8" mat-raised-button color="primary">Atualizar</button>
+    <button routerLink="../../" (click)="update()" [disabled]="!validaCampos()" class="add mat-elevation-z8" mat-raised-button color="primary">Atualizar</button>
     
     <button routerLink="../ ../" class="fullWidth" mat-elevation-z8 mat-flat-button color="warn">Cancelar</button>
 
