componente cadastro criado

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -31,7 +31,7 @@
        </mat-form-field>
  
        <button (click)="logar()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Login</button>
-
+       <button routerLink="../motoboy/create" mat-stroked-button color="black" class="mat-elevation-z10"><b>Novo Motoboy</b></button>
     </form>
 
   </div>
