Alteração na animação do botão de login, e colocação de animação na imagem da tela de login

--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,1 +1,20 @@
-<p>cadastro works!</p>
+<div class="base">
+<div class="comtainer mat-elevation-z8" >
+    <form class="form">
+      <br>
+        <h1 class="fullWidth">Bem-Vindo</h1>
+        <br>
+        <img class="fullWidth" src="assets/img/loginusuario.svg" alt="Help Desk Dicas de um DEV">
+        
+        <p>Aqui você que ira me dizer qual vai ser sua escolha em nosso Aplicativo, queremos saber se você
+            vai ser um ENTREGADOR ou um ESTABELECIMENTO, por favor selecione a opção desejada para proceguir 
+        </p>
+        <p>te</p>
+        
+        <button routerLink="../motoboy/create" mat-stroked-button color="black" class="mat-elevation-z10"><b> Motoboy</b></button>
+
+
+    </form>
+    
+</div>
+
