--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -18,7 +18,7 @@
             <i class="material-icons">support</i>
             Chamados
          </a>
-         <a mat-list-item routerLink="/" >
+         <a mat-list-item routerLink="cadastro" >
             <i class="material-icons">code</i>
             Github
          </a>
